--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-ot-logger",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "logger conforming to ot standards",
   "main": "index.js",
   "scripts": {
@@ -32,5 +32,8 @@
     "hoek": "^2.7.0",
     "json-stringify-safe": "^5.0.0",
     "redis": "^0.12.1"
+  },
+  "peerDependencies": {
+    "hapi": "^8.0.0"
   }
 }
