--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "hoek": "^2.7.0",
     "json-stringify-safe": "^5.0.0",
+    "lodash.once": "^3.0.0",
     "redis": "^0.12.1"
   },
   "peerDependencies": {
