--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "eslint": "^2.13.1",
     "hoek": "^4.0.1",
+    "joi": "^4.9.0",
     "json-stringify-safe": "^5.0.0",
     "lodash.once": "^3.0.0",
     "redis": "^0.12.1"
