--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "joi": "^9.0.0",
     "json-stringify-safe": "^5.0.0",
     "lodash.once": "^3.0.0",
-    "redis": "^0.12.1"
+    "redis": "^0.12.1",
+    "should": "^9.0.2"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
