--- a/package.json
+++ b/package.json
@@ -21,18 +21,16 @@
   },
   "homepage": "https://github.com/opentable/hapi-ot-logger",
   "dependencies": {
-    "eslint": "^3.0.1",
     "hoek": "^4.0.1",
-    "joi": "^9.0.0",
     "json-stringify-safe": "^5.0.0",
     "lodash.once": "^4.0.0",
-    "redis": "^0.12.1",
-    "should": "^9.0.2"
+    "redis": "^0.12.1"
   },
   "devDependencies": {
-    "eslint": "^2.13.1",
+    "eslint": "^3.0.1",
     "eslint-config-defaults": "^9.0.0",
-    "joi": "^4.7.0",
-    "should": "^3.3.1"
+    "espree": "^3.1.6",
+    "joi": "^9.0.0",
+    "should": "^9.0.2"
   }
 }
