--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/opentable/hapi-ot-logger",
   "devDependencies": {
     "joi": "^4.7.0",
+    "mocha": "^2.5.3",
     "should": "^3.3.1"
   },
   "dependencies": {
