--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/opentable/hapi-ot-logger",
   "devDependencies": {
+    "expect": "^1.20.2",
+    "expect.js": "^0.3.1",
+    "hapi": "^13.5.0",
     "joi": "^4.7.0",
     "mocha": "^2.5.3",
     "should": "^3.3.1"
