--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expect.js": "^0.3.1",
     "hapi": "^9.5.1",
     "mocha": "^2.5.3",
+    "rewire": "^2.5.2",
     "should": "^3.3.1"
   },
   "dependencies": {
