--- a/package.json
+++ b/package.json
@@ -23,12 +23,10 @@
   "devDependencies": {
     "eslint": "^2.13.1",
     "eslint-config-defaults": "^9.0.0",
-    "expect": "^1.20.2",
+    "espree": "^3.1.6",
     "expect.js": "^0.3.1",
-    "hapi": "^9.5.1",
     "mocha": "^2.5.3",
-    "rewire": "^2.5.2",
-    "should": "^3.3.1"
+    "rewire": "^2.5.2"
   },
   "dependencies": {
     "hoek": "^2.7.0",
